syntax = "proto3";
import "collab/common.proto";
import "collab/embeddings.proto";

package collab;

// Payload for sending and receive collab over http.
message CollabParams {
  string object_id = 1;
  // Serialized EncodedCollab object, which could either be in bincode or protobuf serialization format.
  bytes encoded_collab = 2;
  // Collab type.
  CollabType collab_type = 3;
  // Document embeddings.
  optional CollabEmbeddings embeddings = 4;
}

// Payload for creating batch of collab over http.
message BatchCreateCollabParams {
  // Workspace id.
  string workspace_id = 1;
  // List of collab params.
  repeated CollabParams params_list = 2;
}

// Payload for creating new collab or update existing collab over http.
message CreateCollabParams {
  // Workspace id.
  string workspace_id = 1;
  // Object id.
  string object_id = 2;
  // Serialized EncodedCollab object, which could either be in bincode or protobuf serialization format.
  bytes encoded_collab = 3;
  // Collab type.
  CollabType collab_type = 4;
}
